changed the style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href='Contact Information/information.html'>Contact Information</a></li>
     </ul>
     <h1>About me</h1>
-    <div>
+    <div class='border'>
         <p>My name is Shedlia Freeman. I am currently located at Base Camp Coding Academy located in Water Valley, Ms. My end
             goal for the year is to be proficient in coding to find a job. I started coding June 1, 2017. We are currently
             learning Python and Html
