--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 </head>
 
 <body>
+    
     <h3><a href='index.html'>Shedlia Portfolio</a></h3>
-    <ul>
-        <li><a href='index.html'>About Me</a></li>
-        <li><a href='Projects/first.html'>Projects</a></li>
-        <li><a href='Contact Information/information.html'>Contact Information</a></li>
-    </ul>
-    <h1>About me</h1>
+    <nav>
+        <ul>
+            <li><a href='index.html'>About Me</a></li>
+            <li><a href='Projects/first.html'>Projects</a></li>
+            <li><a href='Contact Information/information.html'>Contact Information</a></li>
+        </ul>
+    </nav>
+    <div class='header'>
+        <h1>About me</h1>
+    </div>
     <div class='border'>
         <p>My name is Shedlia Freeman. I am currently located at Base Camp Coding Academy located in Water Valley, Ms. My end
             goal for the year is to be proficient in coding to find a job. I started coding June 1, 2017. We are currently
