--- a/index.html
+++ b/index.html
@@ -6,29 +6,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shedlia's Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
-    
-    <h3><a href='index.html'>Shedlia Portfolio</a></h3>
-    <nav>
-        <ul>
-            <li><a href='index.html'>About Me</a></li>
-            <li><a href='Projects/first.html'>Projects</a></li>
-            <li><a href='Contact Information/information.html'>Contact Information</a></li>
-        </ul>
-    </nav>
-    <div class='header'>
-        <h1>About me</h1>
-    </div>
-    <div class='border'>
-        <p>My name is Shedlia Freeman. I am currently located at Base Camp Coding Academy located in Water Valley, Ms. My end
-            goal for the year is to be proficient in coding to find a job. I started coding June 1, 2017. We are currently
-            learning Python and Html
-        </p>
-    </div>
+    <div class='container'>
+        <img src="photos/headerimage.jpg" class='logo-background'>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Shedlia's Portfolio</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">About Me</a></li>
+                    <li><a href="https://github.com/Sfreeman99" target='__blank'>Git Hub</a></li>
+                    <li><a href="https://www.linkedin.com/in/shedlia-freeman-265609149/" target='__blank'>Linkedin</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <div class="panel">
+                    <div class="panel-heading">About Me</div>
+                    <div class="panel-body">
+                        <p>My name is Shedlia Freeman. I have grown up in Water Valley, Ms for mostly all of my life. I am a
+                            current student at
+                            <a href='http://www.basecampcodingacademy.org' target="__blank">Base Camp Coding Academy</a>.
+                            I plan to find an employer that fits me best.
+                        </p>
+                        <p>Email: sfreeman@basecampcodingacademy.org </p>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+                <ul class="nav nav-pills">
+                    <li class="active"><a data-toggle="pill" href="#home">Project Home</a></li>
+                    <li><a data-toggle="pill" href="#menu1">Hangman</a></li>
+                    <li><a data-toggle="pill" href="#menu2">Gladiators</a></li>
+                    <li><a data-toggle="pill" href="#menu3">Rental-Store</a></li>
+                    <li><a data-toggle="pill" href="#menu4">Gas Pump</a></li>
+                    <li><a data-toggle="pill" href="#menu5">Record Keeper</a></li>
+                </ul>
+
+                <div class="tab-content">
+                    <div id="home" class="tab-pane fade in active">
+                        <h3>Projects</h3>
+                        <p>Click through the tabs to check out some of the projects I've done!
+                        </p>
+                    </div>
+                    <div id="menu1" class="tab-pane fade">
+                        <h3>Hangman</h3>
+                        <p>Hangman is a game where you keep guessing letters until you either solve the puzzle and win, or you
+                            lose by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here</a>to
+                            check it out!
+                        </p>
+                    </div>
+                    <div id="menu2" class="tab-pane fade">
+                        <h3>Gladiators</h3>
+                        <p>The objective behind the Gladiators Game was to make a game that had two enemies fight each other
+                            until one died. I made two versions of this game which was in <a href='https://github.com/Sfreeman99/Gladiators_Classes'
+                                target='__blank'>Classes</a> and <a href='https://github.com/Sfreeman99/Gladiators_Dictionaries_Version'
+                                target='__blank'>Dictionaries</a>.</p>
+                    </div>
+                    <div id="menu3" class="tab-pane fade">
+                        <h3>Rental-Store</h3>
+                        <p>Our class had to work on the scenario of working with a rental agency to build a user friendly command
+                            line interface Python application to manage the sales, inventory, and revenue for the company.
+                            We all had to work on this project by ourselves and come up with our own solution to the problem.
+                            Also, no project could be exactly similar so that meant we could not copy our classmates work
+                            and use it in our own which was the most difficult part for the class in my opinion. <a href='https://github.com/Sfreeman99/Rental_Store'
+                                target='__blank'>Click Here</a>.
+                        </p>
+                    </div>
+                    <div id="menu4" class="tab-pane fade">
+                        <h3>Gas Pump</h3>
+                        <p>This application was made to utilize what we learned using list. I made this application 4 weeks
+                            in learning python. <a href='https://github.com/Sfreeman99/Gas-Pump' target='__blank'>Click Here</a></p>
+                    </div>
+                    <div id="menu5" class="tab-pane fade">
+                        <h3>Record Keeper</h3>
+                        <p>An application that is written in python that allows the user to keep track of his or her records.
+                            Contributers to this project was <a href='http://josmith18.github.io' target='__blank'>Jo'Tavious Smith</a>.
+                            To see the code <a href='https://github.com/Sfreeman99/Python-Record-Keeper' target='__blank'>Click Here</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div>
+            <table>
+                <tr>
+                    <th>Project Name</th>
+                    <th>Link</th>
+                </tr>
+                <tr>
+                    <td class='table-1'>Hangman</td>
+                    <td>Hangman is a game where you keep guessing letters until you either solve the puzzle and win, or you lose
+                        by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here</a>to check it
+                        out!
+                    </td>
+                </tr>
+                <tr>
+                    <td class='table-2'>Gladiators</td>
+                    <td>The objective behind the Gladiators Game was to make a game that had two enemies fight each other until
+                        one died. I made two versions of this game which was in <a href='https://github.com/Sfreeman99/Gladiators_Classes'
+                            target='__blank'>Classes</a> and <a href='https://github.com/Sfreeman99/Gladiators_Dictionaries_Version'
+                            target='__blank'>Dictionaries</a>.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Rental Store</td>
+                    <td>This was our python project</td>
+                </tr>
+            </table>
+        </div> -->
+    </div>
 </body>
 
 </html>
