added font awesome links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </div>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">About Me</a></li>
-                        <li><a href="https://github.com/Sfreeman99" target='__blank'>Git Hub</a></li>
-                        <li><a href="https://www.linkedin.com/in/shedlia-freeman-265609149/" target='__blank'>Linkedin</a></li>
+                        <li><a href="https://github.com/Sfreeman99" target='__blank'><i class="fa fa-github-alt" aria-hidden="true"></i> Git Hub</a></li>
+                        <li><a href="https://www.linkedin.com/in/shedlia-freeman-265609149/" target='__blank'><i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a></li>
                     </ul>
                 </div>
             </nav>
@@ -74,7 +74,7 @@
                             <div class="portfolio-text">
                                 <h3>Hangman</h3>
                                 <p>Hangman is a game where you keep guessing letters until you either solve the puzzle and win,
-                                    or you lose by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here</a>to
+                                    or you lose by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here </a>to
                                     check it out!
                                 </p>
                             </div>
