added new font for the title

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
     <div class='container'>
-        <!-- <img src="photos/headerimage.jpg" class='logo-background'> -->
         <div class="container">
             <div class="jumbotron">
                 <h1>Shedlia Freeman</h1>
@@ -119,33 +119,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div>
-            <table>
-                <tr>
-                    <th>Project Name</th>
-                    <th>Link</th>
-                </tr>
-                <tr>
-                    <td class='table-1'>Hangman</td>
-                    <td>Hangman is a game where you keep guessing letters until you either solve the puzzle and win, or you lose
-                        by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here</a>to check it
-                        out!
-                    </td>
-                </tr>
-                <tr>
-                    <td class='table-2'>Gladiators</td>
-                    <td>The objective behind the Gladiators Game was to make a game that had two enemies fight each other until
-                        one died. I made two versions of this game which was in <a href='https://github.com/Sfreeman99/Gladiators_Classes'
-                            target='__blank'>Classes</a> and <a href='https://github.com/Sfreeman99/Gladiators_Dictionaries_Version'
-                            target='__blank'>Dictionaries</a>.
-                    </td>
-                </tr>
-                <tr>
-                    <td>Rental Store</td>
-                    <td>This was our python project</td>
-                </tr>
-            </table>
-        </div> -->
         </div>
     </div>
 </body>
