Deleted unwanted files and added a few icons to show the difference between projects

--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shedlia's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="lavish.css">
+    <!-- Bootstrap 4 Link starts here -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+        crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+        crossorigin="anonymous"></script> -->
+    <!-- Bootstrap 4 Links end here -->
+    <!--__________________________________________________________________________ -->
+    <!-- Bootstrap 3 links below this line -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- End of Bootstrap 3 Links -->
+    <link rel="stylesheet" type="text/css" href="special_icons/font-mfizz.css">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
@@ -55,11 +69,18 @@
                 <div class="col-lg-8">
                     <ul class="nav nav-pills">
                         <li class="active"><a data-toggle="pill" href="#home">Project Home</a></li>
-                        <li><a data-toggle="pill" href="#menu1">Hangman</a></li>
-                        <li><a data-toggle="pill" href="#menu2">Gladiators</a></li>
-                        <li><a data-toggle="pill" href="#menu3">Rental-Store</a></li>
-                        <li><a data-toggle="pill" href="#menu4">Gas Pump</a></li>
-                        <li><a data-toggle="pill" href="#menu5">Record Keeper</a></li>
+                        <li><a data-toggle="pill" href="#menu1">Hangman&nbsp;<i class="icon-python"></i></a></li>
+                        <li><a data-toggle="pill" href="#menu2">Gladiators&nbsp;<i class="icon-python"></i></a></li>
+                        <li><a data-toggle="pill" href="#menu3">Rental-Store&nbsp;<i class="icon-python"></i></a></li>
+                        <li><a data-toggle="pill" href="#menu4">Gas Pump&nbsp;<i class="icon-python"></i></a></li>
+                        <!-- <li><a data-toggle="pill" href="#menu5">Record Keeper</a></li> -->
+                        <li class="dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Record Keeper</a>
+                            <div class="dropdown-menu">
+                                <a data-toggle="pill" class="dropdown-item" href="#menu5">CommandLine&nbsp;<i class="icon-python"></i></a>
+                                <div class="dropdown-divider"></div>
+                                <a data-toggle='pill' class="dropdown-item" href="#menu6">Flask&nbsp;<i class="icon-html5"></i></a>
+                            </div>
                     </ul>
 
                     <div class="tab-content">
@@ -67,12 +88,14 @@
                             <div class="portfolio-text">
                                 <h3>Projects</h3>
                                 <p>Click through the tabs to check out some of the projects I've done!
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i><br>
+                                    <i class="icon-python"></i>
                                 </p>
                             </div>
                         </div>
                         <div id="menu1" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Hangman</h3>
+                                <h3>Hangman </h3>
                                 <p>Hangman is a game where you keep guessing letters until you either solve the puzzle and win,
                                     or you lose by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here </a>to
                                     check it out!
@@ -110,10 +133,20 @@
                         </div>
                         <div id="menu5" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Record Keeper</h3>
+                                <h3>CommandLine Record Keeper</h3>
                                 <p>An application that is written in python that allows the user to keep track of his or her
                                     records. Contributers to this project was <a href='http://josmith18.github.io' target='__blank'>Jo'Tavious Smith</a>.
                                     To see the code <a href='https://github.com/Sfreeman99/Python-Record-Keeper' target='__blank'>Click Here</a></p>
+
+                            </div>
+                        </div>
+                        <div id="menu6" class="tab-pane fade">
+                            <div class="portfolio-text">
+                                <h3>Flask Recorder Keeper</h3>
+                                <p>This application was made because of the limitations of the CommandLine Record Keeper. The
+                                    CommandLine Record Keeper could only be used on my computer specifically. The Flask Record
+                                    Keeper was made so that you can use the CommandLine Record Keeper online.</p>
+
                             </div>
                         </div>
                     </div>
