--- a/index.html
+++ b/index.html
@@ -6,146 +6,225 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shedlia's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="lavish.css">
     <!-- Bootstrap 4 Link starts here -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-        crossorigin="anonymous"></script> -->
-    <!-- Bootstrap 4 Links end here -->
-    <!--__________________________________________________________________________ -->
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap 4 Links end here
+    <!--__________________________________________________________________________-->
     <!-- Bootstrap 3 links below this line -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <!-- End of Bootstrap 3 Links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="special_icons/font-mfizz.css">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="lavish.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
-    <div class='container'>
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Shedlia Freeman</h1>
-                <p>Student at Base Camp Coding Academy.</p>
+    <div class='container-fluid'>
+        <div class='container'>
+            <div class="jumbotron jumbotron-fluid" id="grad">
+                <h1 class="display-5">Shedlia Freeman</h1>
+                <p class='lead'>Student at Base Camp Coding Academy.</p>
             </div>
+            <!-- Bootstrap 4 NavBar -->
+            <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="https://docs.google.com/a/basecampcodingacademy.org/document/d/1_h_e7eS3UIjBmZ0pV1QCCs1349uV3nOvnCT-L-5sKA0/edit?usp=sharing"
+                    target="__blank">Shedlia's Resume</a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="index.html">About Me
+                            <span class="sr-only"></span>
+                        </a>
+                        <a class="nav-item nav-link" href="https://github.com/Sfreeman99" target='__blank'>
+                            <i class="fa fa-github-alt" aria-hidden="true"></i> Git Hub</a>
+                        <a class="nav-item nav-link" href="https://www.linkedin.com/in/shedlia-freeman-265609149/" target='__blank'>
+                            <i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!-- Bootstrap 4 NavBar End -->
+        <!-- Bootstrap 3 NavBar -->
+        <!-- <div class='container'>
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Shedlia's Portfolio</a>
+                        <a class="navbar-brand" href="https://docs.google.com/a/basecampcodingacademy.org/document/d/1_h_e7eS3UIjBmZ0pV1QCCs1349uV3nOvnCT-L-5sKA0/edit?usp=sharing"
+                            target="__blank">Shedlia's Resume</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">About Me</a></li>
-                        <li><a href="https://github.com/Sfreeman99" target='__blank'><i class="fa fa-github-alt" aria-hidden="true"></i> Git Hub</a></li>
-                        <li><a href="https://www.linkedin.com/in/shedlia-freeman-265609149/" target='__blank'><i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a></li>
-                    </ul>
-                </div>
-            </nav>
+            <li class="active">
+                <a href="index.html">About Me</a>
+            </li>
+            <li>
+                <a href="https://github.com/Sfreeman99" target='__blank'>
+                    <i class="fa fa-github-alt" aria-hidden="true"></i> Git Hub</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/shedlia-freeman-265609149/" target='__blank'>
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a>
+            </li>
+            </ul>
+        </div>
+        </nav> -->
+        <!-- BootStrap 3 NavBar end -->
+        <div class='container'>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-xl-4 col-lg-4 col-md-auto col-sm-auto">
                     <div class="panel">
-                        <div class="panel-heading">About Me</div>
+                        <div class="panel-heading">
+                            <h3>About Me</h3>
+                        </div>
                         <div class="panel-body">
                             <p>My name is Shedlia Freeman. I have grown up in Water Valley, Ms for mostly all of my life. I
                                 am a current student at
                                 <a href='http://www.basecampcodingacademy.org' target="__blank">Base Camp Coding Academy</a>.
-                                I plan to find an employer that fits me best.
                             </p>
-                            <p>
+                            <p id='p1'>
                                 <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;sfreeman@basecampcodingacademy.org
                             </p>
 
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8">
-                    <ul class="nav nav-pills">
-                        <li class="active"><a data-toggle="pill" href="#home">Project Home</a></li>
-                        <li><a data-toggle="pill" href="#menu1">Hangman&nbsp;<i class="icon-python"></i></a></li>
-                        <li><a data-toggle="pill" href="#menu2">Gladiators&nbsp;<i class="icon-python"></i></a></li>
-                        <li><a data-toggle="pill" href="#menu3">Rental-Store&nbsp;<i class="icon-python"></i></a></li>
-                        <li><a data-toggle="pill" href="#menu4">Gas Pump&nbsp;<i class="icon-python"></i></a></li>
+                <div class="col-xl-8 col-lg-8 col-md-auto col-sm-auto">
+                    <ul class="nav nav-pills nav-fill">
+                        <li class="nav-item active">
+                            <a data-toggle="pill" href="#home">Project Home</a>
+                        </li>
+                        <li class='nav-item'>
+                            <a data-toggle="pill" class='nav-link' href="#menu1">Hangman
+                                <i class="icon-python"></i>
+                            </a>
+                        </li>
+                        <li class='nav-item'>
+                            <a data-toggle="pill" class='nav-link' href="#menu2">Gladiators
+                                <i class="icon-python"></i>
+                            </a>
+                        </li>
+                        <li class='nav-item'>
+                            <a data-toggle="pill" class='nav-link' href="#menu3">Rental-Store
+                                <i class="icon-python"></i>
+                            </a>
+                        </li>
+                        <li class='nav-item'>
+                            <a data-toggle="pill" class='nav-link' href="#menu4">Gas Pump
+                                <i class="icon-python"></i>
+                            </a>
+                        </li>
                         <!-- <li><a data-toggle="pill" href="#menu5">Record Keeper</a></li> -->
-                        <li class="dropdown">
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Record Keeper</a>
                             <div class="dropdown-menu">
-                                <a data-toggle="pill" class="dropdown-item" href="#menu5">CommandLine&nbsp;<i class="icon-python"></i></a>
+                                <a data-toggle="pill" class="dropdown-item" href="#menu5">CommandLine&nbsp;
+                                    <i class="icon-python"></i>
+                                </a>
                                 <div class="dropdown-divider"></div>
-                                <a data-toggle='pill' class="dropdown-item" href="#menu6">Flask&nbsp;<i class="icon-html5"></i></a>
+                                <a data-toggle="pill" class="dropdown-item" href="#menu6">Flask&nbsp;
+                                    <i class="icon-html5"></i>
+                                </a>
                             </div>
+                        </li>
                     </ul>
-
                     <div class="tab-content">
                         <div id="home" class="tab-pane fade in active">
                             <div class="portfolio-text">
                                 <h3>Projects</h3>
                                 <p>Click through the tabs to check out some of the projects I've done!
-                                    <i class="fa fa-user-circle" aria-hidden="true"></i><br>
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                    <br>
                                     <i class="icon-python"></i>
                                 </p>
                             </div>
                         </div>
                         <div id="menu1" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Hangman </h3>
+                                <h3>Hangman&nbsp;&nbsp;
+                                    <i class="icon-python"></i>
+                                </h3>
                                 <p>Hangman is a game where you keep guessing letters until you either solve the puzzle and win,
-                                    or you lose by using all you tries.<a href='https://github.com/Sfreeman99/Hangman'> Click here </a>to
-                                    check it out!
+                                    or you lose by using all you tries.
+                                    <a href='https://github.com/Sfreeman99/Hangman'>
+                                        Click here </a>to check it out!
                                 </p>
                             </div>
                         </div>
                         <div id="menu2" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Gladiators</h3>
+                                <h3>Gladiators&nbsp;&nbsp;
+                                    <i class="icon-python"></i>
+                                </h3>
                                 <p>The objective behind the Gladiators Game was to make a game that had two enemies fight each
-                                    other until one died. I made two versions of this game which was in <a href='https://github.com/Sfreeman99/Gladiators_Classes'
-                                        target='__blank'>Classes</a> and <a href='https://github.com/Sfreeman99/Gladiators_Dictionaries_Version'
-                                        target='__blank'>Dictionaries</a>.</p>
+                                    other until one died. I made two versions of this game which was in
+                                    <a href='https://github.com/Sfreeman99/Gladiators_Classes' target='__blank'>Classes</a> and
+                                    <a href='https://github.com/Sfreeman99/Gladiators_Dictionaries_Version' target='__blank'>Dictionaries</a>.</p>
                             </div>
                         </div>
                         <div id="menu3" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Rental-Store</h3>
+                                <h3>Rental-Store&nbsp;&nbsp;
+                                    <i class="icon-python"></i>
+                                </h3>
                                 <p>Our class had to work on the scenario of working with a rental agency to build a user friendly
                                     command line interface Python application to manage the sales, inventory, and revenue
                                     for the company. We all had to work on this project by ourselves and come up with our
                                     own solution to the problem. Also, no project could be exactly similar so that meant
                                     we could not copy our classmates work and use it in our own which was the most difficult
-                                    part for the class in my opinion. <a href='https://github.com/Sfreeman99/Rental_Store'
-                                        target='__blank'>Click Here</a>.
+                                    part for the class in my opinion.
+                                    <a href='https://github.com/Sfreeman99/Rental_Store' target='__blank'>Click Here</a>.
                                 </p>
                             </div>
                         </div>
                         <div id="menu4" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Gas Pump</h3>
+                                <h3>Gas Pump&nbsp;&nbsp;
+                                    <i class="icon-python"></i>
+                                </h3>
                                 <p>This application was made to utilize what we learned using list. I made this application
-                                    4 weeks in learning python. <a href='https://github.com/Sfreeman99/Gas-Pump' target='__blank'>Click Here</a></p>
+                                    4 weeks in learning python.
+                                    <a href='https://github.com/Sfreeman99/Gas-Pump' target='__blank'>Click Here</a>
+                                </p>
                             </div>
                         </div>
                         <div id="menu5" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>CommandLine Record Keeper</h3>
+                                <h3>CommandLine Record Keeper&nbsp;&nbsp;
+                                    <i class="icon-python"></i>
+                                </h3>
                                 <p>An application that is written in python that allows the user to keep track of his or her
-                                    records. Contributers to this project was <a href='http://josmith18.github.io' target='__blank'>Jo'Tavious Smith</a>.
-                                    To see the code <a href='https://github.com/Sfreeman99/Python-Record-Keeper' target='__blank'>Click Here</a></p>
+                                    records. Contributers to this project was
+                                    <a href='http://josmith18.github.io' target='__blank'>Jo'Tavious Smith</a>. To see the code
+                                    <a href='https://github.com/Sfreeman99/Python-Record-Keeper' target='__blank'>Click Here</a>
+                                </p>
 
                             </div>
                         </div>
                         <div id="menu6" class="tab-pane fade">
                             <div class="portfolio-text">
-                                <h3>Flask Recorder Keeper</h3>
+                                <h3>Flask Recorder Keeper&nbsp;&nbsp;
+                                    <i class="icon-html5"></i>
+                                </h3>
                                 <p>This application was made because of the limitations of the CommandLine Record Keeper. The
                                     CommandLine Record Keeper could only be used on my computer specifically. The Flask Record
-                                    Keeper was made so that you can use the CommandLine Record Keeper online.</p>
+                                    Keeper was made so that you can use the CommandLine Record Keeper online. To see the
+                                    web project
+                                    <a href='http://sfreeman99.pythonanywhere.com' target='__blank'>Click Here</a>.
+                                </p>
 
                             </div>
                         </div>
@@ -154,6 +233,9 @@
             </div>
         </div>
     </div>
+    </div>
+
 </body>
+<script src="javascript.js"></script>
 
 </html>
